# echidna

./: .clang-format  .cppcheck-suppressions  .gitignore  Android.bp  Doxyfile  agents.md  docs-requirements.txt  license.md  mkdocs.yml  readme.md  spec.md  todo.md
android/app/app/src/main/cpp/: CMakeLists.txt  echidna_lab_jni.cpp
android/control-service/service/src/main/cpp/: CMakeLists.txt  echidna_control_jni.cpp
docker/: .gitattributes  README.md  compose.yaml
docs/: architecture.md  build-install.md  comparison.md  design-rationale.md  developer_readme.md  dsp-effects.md  getting-started.md  index.md  installer-guide.md  legacy-effect-emulator-loader-validation.md  limitations.md  magisk_release.md  performance-testing.md  recovery.md  release-packages.md  screenshots.md  signing.md  stable-aidl-effect-oem-integration.md  troubleshooting-faq.md  usage-alerts.md  usage-help.md  usage-lab.md  usage-theming.md  usage-widgets-quicksettings.md  vendor-hal-analysis.md  verification.md  (+1 more)
native/: CMakeLists.txt
native/dsp/: CMakeLists.txt
native/dsp/include/echidna/dsp/: api.h  plugin_api.h
native/dsp/src/: api.cpp  engine.cpp  engine.h
native/dsp/src/config/: preset_loader.cpp  preset_loader.h
native/dsp/src/effects/: auto_tune.cpp  auto_tune.h  compressor.cpp  compressor.h  effect_base.cpp  effect_base.h  formant_shifter.cpp  formant_shifter.h  gate_processor.cpp  gate_processor.h  mix_bus.cpp  mix_bus.h  parametric_eq.cpp  parametric_eq.h  pitch_shifter.cpp  pitch_shifter.h  reverb.cpp  reverb.h
native/dsp/src/plugins/: plugin_loader.cpp  plugin_loader.h
native/dsp/src/runtime/: block_queue.cpp  block_queue.h  ring_buffer.h  simd.cpp  simd.h
native/dsp/tests/: CMakeLists.txt  api_abi_test.cpp  dsp_quality_test.cpp  effects_test.cpp  engine_test.cpp  preset_test.cpp
native/effects/aidl/: legacy_runtime.cpp  legacy_runtime.h
native/effects/aidl/api34/: echidna_effect.cpp
native/effects/aidl/api35/: echidna_effect.cpp
native/effects/aidl/integration/: android14-effect-type-map.patch  audio_effects_config.api34.xml  audio_effects_config.api35.xml  device-evidence.template.json  manifest.json
native/effects/legacy/: CMakeLists.txt  capability_protocol.cpp  capability_protocol.h  capability_schema.md  effect_abi.h  effect_context.cpp  effect_context.h  effect_exports.map  effect_library.cpp  effect_library.h  telemetry_protocol.cpp  telemetry_protocol.h  telemetry_schema.md
native/effects/legacy/tests/: CMakeLists.txt  abi_test.cpp  audio_test.cpp  capability_test.cpp  lifecycle_test.cpp  realtime_test.cpp  telemetry_test.cpp  test_support.h
native/include/: echidna_api.h
native/zygisk/: CMakeLists.txt
native/zygisk/include/: zygisk.hpp
native/zygisk/include/echidna/: api.h
native/zygisk/src/: api.cpp  module.cpp
native/zygisk/src/audio/: pcm_buffer_processor.cpp  pcm_buffer_processor.h
native/zygisk/src/dsp/: stream_handle_registry.cpp  stream_handle_registry.h
native/zygisk/src/hooks/: aaudio_callback_registry.cpp  aaudio_callback_registry.h  aaudio_hook_manager.cpp  aaudio_hook_manager.h  aaudio_hook_readiness.cpp  aaudio_hook_readiness.h  aaudio_stream_contract.cpp  aaudio_stream_contract.h  aaudio_stream_registry.cpp  aaudio_stream_registry.h  audio_hook_orchestrator.cpp  audio_hook_orchestrator.h  audioflinger_format.h  audioflinger_hook_manager.cpp  audioflinger_hook_manager.h  audiohal_contract.h  audiohal_hook_manager.cpp  audiohal_hook_manager.h  audiorecord_hook_manager.cpp  audiorecord_hook_manager.h  capture_buffer_router.cpp  capture_buffer_router.h  capture_route_reachability.h  fd_verdict_cache.cpp  fd_verdict_cache.h  hook_manager.cpp  hook_manager.h  libc_read_hook_manager.cpp  libc_read_hook_manager.h  opensl_buffer_fifo.h  opensl_hook_manager.cpp  opensl_hook_manager.h  opensl_pcm_contract.h  opensl_stream_registry.cpp  opensl_stream_registry.h  tinyalsa_contract.h  tinyalsa_hook_manager.cpp  tinyalsa_hook_manager.h  tinyalsa_stream_registry.cpp  tinyalsa_stream_registry.h  (+1 more)
native/zygisk/src/jni/: audio_bridge.cpp  native_bridge_runtime.h  native_bridge_runtime_standalone.cpp  native_bridge_runtime_zygisk.cpp
native/zygisk/src/runtime/: aarch64_instruction.h  activation_gate.h  armv7_instruction.h  inline_hook.cpp  inline_hook.h  profile_sync_protocol.cpp  profile_sync_protocol.h  profile_sync_server.cpp  profile_sync_server.h  reconnect_backoff.h  telemetry_socket_exporter.cpp  telemetry_socket_exporter.h
native/zygisk/src/state/: shared_state.cpp  shared_state.h
native/zygisk/src/utils/: android_shared_memory.h  api_level_probe.cpp  api_level_probe.h  config_shared_memory.cpp  config_shared_memory.h  offset_probe.cpp  offset_probe.h  plt_resolver.cpp  plt_resolver.h  proc_maps_scanner.cpp  proc_maps_scanner.h  process_utils.cpp  process_utils.h  telemetry_accumulator.cpp  telemetry_accumulator.h  telemetry_shared_memory.cpp  telemetry_shared_memory.h
native/zygisk/tests/: CMakeLists.txt  aarch64_instruction_test.cpp  aaudio_callback_registry_test.cpp  aaudio_hook_install_test.cpp  aaudio_stream_contract_test.cpp  aaudio_stream_registry_test.cpp  activation_gate_test.cpp  armv7_instruction_test.cpp  audioflinger_format_test.cpp  audiohal_contract_test.cpp  capture_buffer_router_test.cpp  capture_route_reachability_test.cpp  config_shared_memory_test.cpp  dsp_smoke_test.cpp  fd_verdict_cache_test.cpp  opensl_buffer_fifo_test.cpp  opensl_lifecycle_test.cpp  opensl_pcm_contract_test.cpp  opensl_stream_registry_test.cpp  process_utils_test.cpp  profile_sync_protocol_test.cpp  profile_sync_server_test.cpp  stream_handle_registry_test.cpp  telemetry_accumulator_test.cpp  telemetry_socket_exporter_test.cpp  tinyalsa_contract_test.cpp  tinyalsa_stream_registry_test.cpp
native/zygisk/tests/fake_sles/SLES/: OpenSLES.h  OpenSLES_Android.h
tools/perf/: CMakeLists.txt  audio_pipeline_benchmark.cpp  audio_pipeline_post_handoff_comparison.json  audio_pipeline_result.schema.json  compare_audio_pipeline_reports.py  run_audio_pipeline_benchmark.ps1  run_audio_pipeline_benchmark.sh  validate_audio_pipeline_report.py
(+431 files in other folders)
